<resources>
    <string name="app_name">BrainCard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="subject_name">Nome Materia</string>
    <string name="creator_name">Nome del creatore</string>
    <string name="deck1">Deck 1</string>
    <string name="deck2">Deck 2</string>
    <string name="deck3">Deck 3</string>
    <string name="short_text">Eventuale breve messaggio da parte del creatore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Benvenuto"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baseline_arrow_back_24_description">freccia back</string>
    <string name="default_title">BrainCard</string>
    <string name="default_numbers">null</string>
    <string name="Hint_mod_crea">Domanda base</string>
    <string name="risposta_card">Risposta base</string>
    <string name="gira_flashcard">Gira</string>
    <string name="Bottone_salva">Salva</string>
    <string name="domanda">Domanda base</string>
    <string name="risposta">risposta base</string>
    <string name="tick_description">corretto</string>
    <string name="cross_description">Sbagliata</string>
    <string name="Hint_mod_crea_risposta">Risposta base</string>
    <string name="elimina_description">elimina card</string>
    <string name="congratulazioni_hai_completato_il_deck">Congratulazioni! Hai completato il deck</string>
    <string name="_0">0%</string>
    <string name="invalid_telefono">Telefono must contain only 10 numbers</string>
    <string name="invalid_genere">Genere can be only \"maschio\", \"femmina\" or \"altro\"</string>
    <string name="invalid_email">Please use a correct email format</string>
    <string name="editCreatoreText">Scrivi il tuo messaggio del creatore</string>
    <string name="profilo">Profilo</string>
    <string name="download_deck">Download deck</string>
    <string name="mostra_psw">Mostra password</string>
    <string name="pswdim">Password dimenticata?</string>
    <string name="NoGruppi">Non sono presenti gruppi,\ncreane uno o importalo dallo shop</string>
    <string name="NoDeck">Non sono presenti deck, creane uno</string>
    <string-array name="gender_options">
        <item>Maschio</item>
        <item>Femmina</item>
        <item>Altro</item>
    </string-array>
</resources>