<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MateriaFragment">

    <LinearLayout
        android:id="@+id/contenitore_totale"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/subject_box"
            android:background="#4CAF50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backArrow"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/subject_title"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="8dp"
                android:text="@string/subject_name"
                android:textSize="30dp"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/info_creator_box"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/creator_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creator_name"
                android:textSize="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/short_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/short_text"
                android:textSize="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <ScrollView
            android:id="@+id/decks_scrollbox"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintBottom_toTopOf="@id/download">

            <LinearLayout
                android:id="@+id/decks_box"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/deck1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/deck1"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/deck2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/deck2"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/deck3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/deck3"
                    android:textSize="40dp" />

            </LinearLayout>

        </ScrollView>

        <ImageView
            android:id="@+id/download"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/baseline_downloading_24"/>

    </LinearLayout>

</FrameLayout>