<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/flashcard"
        android:layout_width="379dp"
        android:layout_height="544dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="toggleFlashcardVisibility"
        android:visibility="visible"
        app:cardBackgroundColor="#D1D1D1"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/resultBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textDomanda"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|top"
            android:background="@null"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/Hint_mod_crea"
            android:text="@string/domanda" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/flashcardBack"
        android:layout_width="379dp"
        android:layout_height="544dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="toggleFlashcardVisibility"
        android:visibility="invisible"
        app:cardBackgroundColor="#D1D1D1"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/resultBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textRisposta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|top"
            android:background="@null"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/Hint_mod_crea"
            android:text="@string/risposta" />

    </androidx.cardview.widget.CardView>

        <!-- Add the content for the front side of the flashcard here -->

    <LinearLayout
        android:id="@+id/resultBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976">

        <!-- Green tick for "Correct" -->
        <ImageView
            android:id="@+id/CorrettoImageView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/tick_description"
            android:focusable="true"
            android:onClick="onCorrectClicked"
            android:src="@drawable/baseline_check_circle_24" />

        <!-- Red cross for "Wrong" -->
        <ImageView
            android:id="@+id/SbagliatoImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/cross_description"
            android:focusable="true"
            android:onClick="onWrongClicked"
            android:src="@drawable/baseline_block_24" />

    </LinearLayout>

    <!-- Add the rest of your content here -->

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>