<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.braincard.ModCreaCardViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <!-- Status bar -->

        <androidx.cardview.widget.CardView
            android:id="@+id/flashcard"
            android:layout_width="303dp"
            android:layout_height="550dp"
            android:layout_gravity="center"
            android:visibility="visible"
            app:cardBackgroundColor="#D1D1D1"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bottone_salva"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gira_card">

            <!-- Add the content for the front side of the flashcard here -->

            <EditText
                android:id="@+id/editDomanda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|top"
                android:background="@null"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Hint_mod_crea"
                android:inputType="text" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/flashcardBack"
            android:layout_width="302dp"
            android:layout_height="549dp"
            android:visibility="gone"
            app:cardBackgroundColor="#D1D1D1"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bottone_salva"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gira_card">

            <EditText
                android:id="@+id/editRisposta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Hint_mod_crea"
                android:inputType="text"
                android:text="@string/risposta_card" />

        </androidx.cardview.widget.CardView>


        <com.google.android.material.chip.Chip
            android:id="@+id/gira_card"
            android:layout_width="84dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:checkable="false"
            android:onClick="onChipClick"
            android:text="@string/gira_flashcard"
            app:layout_constraintBottom_toTopOf="@+id/bottone_salva"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.165"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.009"
            tools:text="@string/gira_flashcard" />

        <Button
            android:id="@+id/bottone_salva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="onSalvaButtonClick"
            android:text="@string/Bottone_salva"
            app:backgroundTint="#4CAF50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/numbersTextView"
            android:layout_width="104dp"
            android:layout_height="42dp"
            android:layout_marginStart="104dp"
            android:text="@string/default_numbers"
            app:layout_constraintBottom_toTopOf="@+id/bottone_salva"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/gira_card"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.034" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>