<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!-- Status bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#4CAF50"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Left back arrow -->
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/back_arrow_description"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515" />

        <!-- Center variable title -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/default_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backArrow"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Right numbers -->
        <TextView
            android:id="@+id/numbersTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/default_numbers"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/titleTextView"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Flashcard design -->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/flashcard"
        android:layout_width="379dp"
        android:layout_height="544dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="#D1D1D1"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/statusBar"
        app:layout_constraintVertical_bias="0.572"
        tools:layout_editor_absoluteX="16dp">

        <!-- Add the content for the front side of the flashcard here -->

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|top"
            android:background="@null"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/Hint_mod_crea"
            android:inputType="text" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:checkable="false"
        android:text="@null"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="59dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="108dp"
        android:layout_height="25dp"
        android:text="@string/gira_flashcard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toEndOf="@+id/chip"
        tools:layout_editor_absoluteY="70dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#4CAF50"
        android:backgroundTint="#4CAF50"
        android:text="@string/Bottone_salva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashcard" />
</androidx.constraintlayout.widget.ConstraintLayout>