<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstrLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/flashcard"
            android:layout_width="330dp"
            android:layout_height="532dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="toggleFlashcardVisibility"
            android:visibility="gone"
            app:cardBackgroundColor="#D1D1D1"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textDomanda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|top"
                android:background="@null"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Hint_mod_crea"
                android:text="@string/domanda" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/flashcardBack"
            android:layout_width="330dp"
            android:layout_height="532dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="toggleFlashcardVisibility"
            android:visibility="gone"
            app:cardBackgroundColor="#D1D1D1"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textRisposta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|top"
                android:background="@null"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Hint_mod_crea"
                android:text="@string/risposta" />

        </androidx.cardview.widget.CardView>

        <!-- Add the content for the front side of the flashcard here -->

        <!-- Add the rest of your content here -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>